[project]
name = "relational-database-skills-lab"
version = "0.1.0"
description = "Relational Database Skills To Master Practical Labs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.uv.workspace]
members = ["labs/*"]

[dependency-groups]
dev = ["mypy>=2.1.0", "ruff>=0.15.14"]
