[project]
name = "complex-data-types"
version = "0.1.0"
description = "PostgreSQL Complex Data Types lab: Standard Types overview, JSONB vs Normalization, UUIDv4 vs UUIDv7 index fragmentation, Array and Range types"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0.0",
    "faker>=40.0.0",
]
