[project]
name = "connection-pool-tuning"
version = "0.1.0"
description = "PostgreSQL & SQLAlchemy Connection Pool Tuning lab: pool_size, max_overflow, pool_pre_ping, and QueuePool TimeoutError diagnostics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "faker>=40.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
]
