[project]
name = "explain-analyze-buffers"
version = "0.1.0"
description = "Query Performance, Execution Plans & Diagnostics: Reading EXPLAIN (ANALYZE, BUFFERS), comparing scans, and analyzing buffer cache hits."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0.0",
    "faker>=40.0.0",
]
