[project]
name = "010-production-observability"
version = "0.1.0"
description = "Production Observability using pg_stat_statements and pg_stat_activity"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.2.2",
]
